adjusted width and corrected overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app-jsx-container{
-    width: 100%;
+    width: 1440px;
     min-height: 100vh;
     position: relative;
     padding: 0 10px;
@@ -7,4 +7,12 @@
     flex-direction: column;
     justify-content: center;
     place-items: center;
+}
+
+.original-width{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    overflow-x: hidden;
 }
