--- a/src/PatientDetails/PatientDetails.css
+++ b/src/PatientDetails/PatientDetails.css
@@ -1,8 +1,6 @@
 .patient-details-container{
     width: 100%;
     display: flex;
-    overflow: auto;
-    overflow-x: hidden;
 }
 
 .sub-upper-container1{
