--- a/src/PatientDisplay/PatientDisplay.css
+++ b/src/PatientDisplay/PatientDisplay.css
@@ -8,6 +8,8 @@
     border: none;
     background-color: white;   
     cursor: pointer;
+    position: relative;
+
     
 }
 
