--- a/src/component/LeftComponent/Left.css
+++ b/src/component/LeftComponent/Left.css
@@ -1,6 +1,5 @@
 .left-container{
-    /* width: 367px; */
-    width: 20%;
+    width: 300px;
     height: 560px;
     overflow: auto;
     overflow-x: hidden;
@@ -47,7 +46,7 @@
 }
 
 .right-component{
-    width: 80%;
+    width: 1073px;
     overflow: auto;
     overflow-x: hidden;
 }
